Correct superscript linespacing bug (issue #45)

--- a/_includes/css/text.css
+++ b/_includes/css/text.css
@@ -16,6 +16,12 @@ p {
     line-height: 20pt;
 }
 
+sup {
+    vertical-align: top;
+    position: relative;
+    top: -0.3em;
+}
+
 a {
     font-family: inherit;
     font-size: inherit;
